project/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: project-ns
  labels:
    app.kubernetes.io/name: fullstack-project
    env: learning
